Updated main page

--- a/FlatStyleBusiness/index.html
+++ b/FlatStyleBusiness/index.html
@@ -48,5 +48,23 @@
             <li class="lerning__item bg-3"></li>
         </ul>
     </section>
+    <section class="author">
+        <div class="author__name-container">
+            <img src="./img/png/author.png" alt="Dhavan" class="dhavan">
+            <p class="author__name">Dhavan</p>
+          
+        </div>
+        <p class="author__description">Lorem ipsum is simply dummy text of the printing and typesetting industry. Lorem ipsum has been the industry's 
+            standart dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to a type specimen book. It has 
+            survived not only five centures, but also the leap into electronic typesetting</p>
+    </section>
+    <section class="callback">
+        <form action="#" method="POST" class="callback-form">
+            <input type="text" name="name" placeholder="Name" autocomplete="off" class="callback_input-item">
+            <input type="email" name="email" placeholder="email address" autocomplete="off" class="callback_input-item">
+            <textarea name="message" cols="30" rows="10" placeholder="Message" class="callback_textarea-item"></textarea>
+            <input type="submit" value="" class="callback_submit-item">
+        </form>
+    </section>
 </body>
 </html>
