Modified main page

--- a/FlatStyleBusiness/index.html
+++ b/FlatStyleBusiness/index.html
@@ -61,10 +61,13 @@
     <section class="callback">
         <form action="#" method="POST" class="callback-form">
             <input type="text" name="name" placeholder="Name" autocomplete="off" class="callback_input-item">
-            <input type="email" name="email" placeholder="email address" autocomplete="off" class="callback_input-item">
+            <input type="email" name="email" placeholder="Email address" autocomplete="off" class="callback_input-item">
             <textarea name="message" cols="30" rows="10" placeholder="Message" class="callback_textarea-item"></textarea>
             <input type="submit" value="" class="callback_submit-item">
         </form>
     </section>
+    <footer class="footer">
+        <p class="footer__description">Copyright © 2012 Css Author.com</p>
+    </footer>
 </body>
 </html>
