Main page edited

--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -10,44 +10,51 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="header__burger-menu"></a>
-        <img src="img/png/header-logo.png" alt="Portpro Logo" class="header__logo">
-        <ul class="header__menu-list">
-            <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Men</a>
-            </li>
-            <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Women</a>
-            </li>
-            <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Kids</a>
-            </li>
-            <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Sports</a>
-            </li>
-            <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Brands</a>
-            </li>
-            <li class="header__menu-item">
-                <a href="#" class="header__menu-link">Customize</a>
-            </li>
-        </ul>
-        <ul class="header__social-list">
-            <li class="header__social-item">
-                <a href="#" class="header__social-link bg-social-1"></a>
-            </li>
-            <li class="header__social-item">
-                <a href="#" class="header__social-link bg-social-2"></a>
-            </li>
-            <li class="header__social-item">
-                <a href="#" class="header__social-link bg-social-3"></a>
-            </li>
-            <li class="header__social-item">
-                <a href="#" class="header__social-link bg-social-4"></a>
-            </li>
-        </ul>
-        <a href="" class="header__cart"></a>
-        <a href="" class="header__search"></a>
+        <div class="header__navi-menu">
+            <a href="#" class="header__burger-menu"></a>
+            <img src="img/png/header-logo.png" alt="Portpro Logo" class="header__logo">
+            <ul class="header__menu-list">
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Men</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Women</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Kids</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Sports</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Brands</a>
+                </li>
+                <li class="header__menu-item">
+                    <a href="#" class="header__menu-link">Customize</a>
+                </li>
+            </ul>
+            <ul class="header__social-list">
+                <li class="header__social-item">
+                    <a href="#" class="header__social-link bg-social-1"></a>
+                </li>
+                <li class="header__social-item">
+                    <a href="#" class="header__social-link bg-social-2"></a>
+                </li>
+                <li class="header__social-item">
+                    <a href="#" class="header__social-link bg-social-3"></a>
+                </li>
+                <li class="header__social-item">
+                    <a href="#" class="header__social-link bg-social-4"></a>
+                </li>
+            </ul>
+            <a href="" class="header__cart"></a>
+            <a href="" class="header__search"></a>
+        </div>
+        <div class="header__discount">
+            <h1 class="discount-heading">nike shoes</h1>
+            <p class="discount-description">sign up now and get 50% off</p>
+            <a href="#" class="btn-discount">Shop now</a>
+        </div>
     </header>
 </body>
 </html>
