--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header__navi-menu">
             <a href="#" class="header__burger-menu"></a>
-            <img src="img/png/header-logo.png" alt="Portpro Logo" class="header__logo">
+            <a href="#" class="header__logo"></a>
             <ul class="header__menu-list">
                 <li class="header__menu-item">
                     <a href="#" class="header__menu-link">Men</a>
