Added shipping menu

--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <title>Sports Store E commerce</title>
 </head>
 <body>
@@ -56,5 +56,29 @@
             <a href="#" class="btn-discount">Shop now</a>
         </div>
     </header>
+    <section class="shipping">
+        <ul class="shipping__list">
+            <li class="shipping__item bg-shipping-1">
+                <h1 class="shipping__heading">free shipping</h1>
+                <p class="shipping__description">Lorem ipsum is simply dummy text of the printing and type setting industry. Lorem ipsum has been the</p>
+                <a href="#" class="shipping__link">Click here</a>
+            </li>
+            <li class="shipping__item bg-shipping-2">
+                <h1 class="shipping__heading">free shipping</h1>
+                <p class="shipping__description">Lorem ipsum is simply dummy text of the printing and type setting industry. Lorem ipsum has been the</p>
+                <a href="#" class="shipping__link">Click here</a>
+            </li>
+            <li class="shipping__item bg-shipping-3">
+                <h1 class="shipping__heading">free shipping</h1>
+                <p class="shipping__description">Lorem ipsum is simply dummy text of the printing and type setting industry. Lorem ipsum has been the</p>
+                <a href="#" class="shipping__link">Click here</a>
+            </li>
+            <li class="shipping__item bg-shipping-4">
+                <h1 class="shipping__heading">free shipping</h1>
+                <p class="shipping__description">Lorem ipsum is simply dummy text of the printing and type setting industry. Lorem ipsum has been the</p>
+                <a href="#" class="shipping__link">Click here</a>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
