--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -53,7 +53,7 @@
         <div class="header__discount">
             <h1 class="discount-heading">nike shoes</h1>
             <p class="discount-description">sign up now and get 50% off</p>
-            <a href="#" class="btn-discount">Shop now</a>
+            <a href="#" class="header-btn btn-discount">Shop now</a>
         </div>
     </header>
     <section class="shipping">
@@ -78,6 +78,40 @@
                 <p class="shipping__description">Lorem ipsum is simply dummy text of the printing and type setting industry. Lorem ipsum has been the</p>
                 <a href="#" class="shipping__link">Click here</a>
             </li>
+        </ul>
+    </section>
+    <section class="offer-of-month">
+        <ul class="offer-of-month__list">
+            <li class="offer-of-month__item">
+                <p class="offer-name">Offer of the month</p>
+                <h1 class="offer-heading">Phantom vision elite dynamic</h1>
+                <p class="offer-description">Lorem Ipsum is simply dummy text of the printing and type setting industry. Lorem the has been the indus- try's Lorem ipsum is simply dummy text if the printing</p>
+                <div class="price-continer">
+                    <h2 class="offer-price">$ 500</h2>
+                    <h3 class="old-offer-price">$ 1000</h3>
+                </div>
+                <div class="offer-timer">
+                    <ul class="timer-list">
+                        <li class="timer-hours">
+                            <h1 class="timer-number">09</h1>
+                            <p class="timer-dots">....</p>
+                            <p class="timer-description">hours</p>
+                        </li>
+                        <li class="timer-minutes">
+                            <h1 class="timer-number">56</h1>
+                            <p class="timer-dots">....</p>
+                            <p class="timer-description">minutes</p>
+                        </li>
+                        <li class="timer-seconds">
+                            <h1 class="timer-number">11</h1>
+                            <p class="timer-dots">....</p>
+                            <p class="timer-description">seconds</p>
+                        </li>
+                    </ul>
+                </div>
+                <a href="#" class="offer-btn">Shop now</a>
+            </li>
+            <li class="offer-of-month__item bg-offer"></li>
         </ul>
     </section>
 </body>
