--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -114,5 +114,72 @@
             <li class="offer-of-month__item bg-offer"></li>
         </ul>
     </section>
+    <section class="product">
+        <ul class="produtcs-list">
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod1.png" alt="Stefan janoski max">
+                <h1 class="products-item__heading">Stefan janoski max</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod2.png" alt="Vandal high supreme">
+                <h1 class="products-item__heading">Vandal high supreme</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod3.png" alt="New zoom">
+                <h1 class="products-item__heading">New zoom</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod4.png" alt="Fit shoes">
+                <h1 class="products-item__heading">Fit shoes</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item products-discount">
+                <h1 class="products-item__heading">Men's running shoes</h1>
+                <p class="new-price">Sign up now and get 50% off</p>
+                <a href="#" class="sg-up-btn">Click here</a>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod5.png" alt="Free shipping">
+                <h1 class="products-item__heading">Free shipping</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item bg-prod-1">
+                <h1> Run, eat, sleep and repeat</h1>
+                <a href="#" class="btn-prod">Shop now</a>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod6.png" alt="Apple watch">
+                <h1 class="products-item__heading">Apple watch</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod7.png" alt="Sport shoes">
+                <h1 class="products-item__heading">Sport shoes</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod4.png" alt="Men shoes">
+                <h1 class="products-item__heading">Men shoes</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+            <li class="products-item">
+                <img src="../SportsStoreEcommerce/img/png/prod8.png" alt="Girl shoes">
+                <h1 class="products-item__heading">Girl shoes</h1>
+                <p class="new-price">$100.00</p>
+                <p class="old-price">$200</p>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
