--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -141,8 +141,8 @@
                 <p class="old-price">$200</p>
             </li>
             <li class="products-item products-discount">
-                <h1 class="products-item__heading">Men's running shoes</h1>
-                <p class="new-price">Sign up now and get 50% off</p>
+                <h1 class="products-discount__heading">Men's running shoes</h1>
+                <p class="products-discount-price">Sign up now and get 50% off</p>
                 <a href="#" class="sg-up-btn">Click here</a>
             </li>
             <li class="products-item">
@@ -151,8 +151,8 @@
                 <p class="new-price">$100.00</p>
                 <p class="old-price">$200</p>
             </li>
-            <li class="products-item bg-prod-1">
-                <h1> Run, eat, sleep and repeat</h1>
+            <li class="products-item-repeat bg-prod-1">
+                <h1 class="repeat-heading"> Run, <br> eat, sleep <br> and repeat</h1>
                 <a href="#" class="btn-prod">Shop now</a>
             </li>
             <li class="products-item">
