Added new styles and tegs

--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -180,6 +180,37 @@
                 <p class="old-price">$200</p>
             </li>
         </ul>
+        <div class="clk-here">
+            <a href="#" class="clk-here-link">Click here</a>
+        </div>
+    </section>
+    <section class="gallery">
+        <ul class="gallery-list">
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery1.jpg" alt="weightlifter" class="weightlifter">
+            </li>
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery2.jpg" alt="running">
+            </li>
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery3.jpg" alt="boxing">
+            </li>
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery4.jpg" alt="yoga">
+            </li>
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery5.jpg" alt="athlete">
+            </li>
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery6.jpg" alt="scate">
+            </li>
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery7.jpg" alt="fithess">
+            </li>
+            <li class="gallery-item">
+                <img src="../SportsStoreEcommerce/img/jpg/gallery8.jpg" alt="kayaking">
+            </li>
+        </ul>
     </section>
 </body>
 </html>
