Added new block

--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -212,5 +212,21 @@
             </li>
         </ul>
     </section>
+    <section class="brends">
+        <ul class="brends-list">
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/harley.png" alt="Harley Davidson" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/adidas.png" alt="Adidas" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/critics.png" alt="Critics" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/slogan.png" alt="General Slogan" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/harley.png" alt="Harley Davidson" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/critics.png" alt="Critics" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/north.png" alt="The North Face" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/reebok.png" alt="Reebok" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/lacoste.png" alt="Lacoste" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/caviar.png" alt="Caviar" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/north.png" alt="The North Face" class="img-brend"></li>
+            <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/lacoste.png" alt="Lacoste" class="img-brend"></li>
+        </ul>
+    </section>
 </body>
 </html>
