Added new elements

--- a/SportsStoreEcommerce/index.html
+++ b/SportsStoreEcommerce/index.html
@@ -188,27 +188,59 @@
         <ul class="gallery-list">
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery1.jpg" alt="weightlifter" class="weightlifter">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Weightlifter</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery2.jpg" alt="running">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Running</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery3.jpg" alt="boxing">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Boxing</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery4.jpg" alt="yoga">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Yoga</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery5.jpg" alt="athlete">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Athlete</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery6.jpg" alt="scate">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Scate</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery7.jpg" alt="fithess">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Fitness</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
             <li class="gallery-item">
                 <img src="../SportsStoreEcommerce/img/jpg/gallery8.jpg" alt="kayaking">
+                <div class="more-info-container">
+                    <h1 class="more-info-description">Kayaking</h1>
+                    <a href="#" class="shipping__link more-info-link">Click here</a>
+                </div>
             </li>
         </ul>
     </section>
@@ -228,5 +260,68 @@
             <li class="brend-item"><img src="../SportsStoreEcommerce/img/png/lacoste.png" alt="Lacoste" class="img-brend"></li>
         </ul>
     </section>
+    <footer class="footer">
+        <div class="footer-links">
+            <div class="footer-menu">
+                <ul class="shops-list">
+                    <h1 class="main-link">Shops</h1>
+                    <li><a href="#" class="second-link">New In</a></li>
+                    <li><a href="#" class="second-link">Women</a></li>
+                    <li><a href="#" class="second-link">Schuhe Shoes</a></li>
+                    <li><a href="#" class="second-link">Bags & Accessories</a></li>
+                    <li><a href="#" class="second-link">Men</a></li>
+                    <li><a href="#" class="second-link">Top Brands</a></li>
+                    <li><a href="#" class="second-link">Sale & Special Offers</a></li>
+                    <li><a href="#" class="second-link">Lookbook</a></li>
+                </ul>
+                <ul class="info-list">
+                    <h1 class="main-link">information</h1>
+                    <li><a href="#" class="second-link">About us</a></li>
+                    <li><a href="#" class="second-link">Customer Service</a></li>
+                    <li><a href="#" class="second-link">New Collection</a></li>
+                    <li><a href="#" class="second-link">Best Sellers</a></li>
+                    <li><a href="#" class="second-link">Manufactures</a></li>
+                    <li><a href="#" class="second-link">Privacy policy</a></li>
+                    <li><a href="#" class="second-link">Terms & condition</a></li>
+                    <li><a href="#" class="second-link">Blog</a></li>
+                </ul>
+                <ul class="customer-list">
+                    <h1 class="main-link">Customer service</h1>
+                    <li><a href="#" class="second-link">Search Terms</a></li>
+                    <li><a href="#" class="second-link">Advanced Search</a></li>
+                    <li><a href="#" class="second-link">Orders and Returns</a></li>
+                    <li><a href="#" class="second-link">Contact Us</a></li>
+                    <li><a href="#" class="second-link">RSS</a></li>
+                    <li><a href="#" class="second-link">Help & FAQs</a></li>
+                    <li><a href="#" class="second-link">Consultant</a></li>
+                    <li><a href="#" class="second-link">Store Locations</a></li>
+                </ul>
+            </div>
+            <div class="connect">
+                <div class="social-links">
+                    <h1 class="main-link">Stay Connected</h1>
+                    <ul class="social-list">
+                        <li class="social-item bg-footer-social-1"></li>
+                        <li class="social-item bg-footer-social-2"></li>
+                        <li class="social-item bg-footer-social-3"></li>
+                        <li class="social-item bg-footer-social-4"></li>
+                        <li class="social-item bg-footer-social-5"></li>
+                        <li class="social-item bg-footer-social-6"></li>
+                    </ul>
+                </div>
+                <div class="sign-up-footer">
+                    <h1 class="main-link">Newsetter sign up</h1>
+                    <form action="#" method="POST">
+                        <input type="text" class="sign-up-input">
+                        <input type="button" value="shop now" class="sign-up-btn">
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="line"></div>
+        <p class="copyright">© 2022 PSDfreebies.com  |  All Rights Reserved. <br> 
+            Free PSD Themes & Templates by PSDfreebies.com.</p>
+        <div class="method-payments"></div>
+    </footer>
 </body>
 </html>
