Added new block

--- a/TaxiCabService/index.html
+++ b/TaxiCabService/index.html
@@ -39,7 +39,7 @@
         <h3 class="header-site">www.psdfreebies.com</h3>
     </header>
     <section class="booking">
-        <div class="read-more-container">
+        <div class="booking__read-more-container">
             <h1 class="booking__heading"><span>Best in city</span><br>Trusted cab servies <br> in new york</h1>
             <p class="booking__description">Quisque sollicitudin feugiat risus, eu posuere ex euismod eu. Phasellus <br> hendrerit, 
                 massa efficitur dapibus pulvinar, sapien eros sodales ante, <br> euismod aliquet nulla 
@@ -48,15 +48,17 @@
                 nulla metus a <br> mauris.</p>
             <a href="#" class="read-more-btn">Read more</a>
         </div>
-        <div class="booking-form-container">
+        <div class="booking__form-container">
+            <h1 class="bkng-container-heading">Book a <span class="bkng-container-heading-span">Cab</span></h1>
             <form action="#" method="POST" class="booking-form">
-                <input type="text" placeholder="Name">
-                <input type="number" placeholder="Phone">
-                <input type="text" placeholder="When">
-                <input type="text" placeholder="Time">
-                <input type="text" placeholder="Start">
-                <input type="text" placeholder="End">
-                <input type="text" placeholder="Choose Vehicle">
+                <input type="text" placeholder="Name" class="bkng-input first-groupe">
+                <input type="tel" placeholder="Phone" class="bkng-input second-groupe">
+                <input type="text" placeholder="When" class="bkng-input first-groupe">
+                <input type="text" placeholder="Time" class="bkng-input second-groupe">
+                <input type="text" placeholder="Start" class="bkng-input first-groupe">
+                <input type="text" placeholder="End" class="bkng-input second-groupe">
+                <input type="text" placeholder="Choose Vehicle" class="bkng-vhlc-input first-groupe">
+                <input type="submit" value="Submit" class="submit-btn">
             </form>
         </div>
     </section>
