Added new styles for Tariff block

--- a/TaxiCabService/index.html
+++ b/TaxiCabService/index.html
@@ -52,15 +52,37 @@
             <h1 class="bkng-container-heading">Book a <span class="bkng-container-heading-span">Cab</span></h1>
             <form action="#" method="POST" class="booking-form">
                 <input type="text" placeholder="Name" class="bkng-input first-groupe">
-                <input type="tel" placeholder="Phone" class="bkng-input second-groupe">
-                <input type="text" placeholder="When" class="bkng-input first-groupe">
+                <input type="tel" placeholder="Phone" class="bkng-input first-groupe">
+                <input type="text" placeholder="When" class="bkng-input second-groupe">
                 <input type="text" placeholder="Time" class="bkng-input second-groupe">
-                <input type="text" placeholder="Start" class="bkng-input first-groupe">
-                <input type="text" placeholder="End" class="bkng-input second-groupe">
-                <input type="text" placeholder="Choose Vehicle" class="bkng-vhlc-input first-groupe">
+                <input type="text" placeholder="Start" class="bkng-input third-groupe">
+                <input type="text" placeholder="End" class="bkng-input third-groupe">
+                <input type="text" placeholder="Choose Vehicle" class="bkng-vhlc-input">
                 <input type="submit" value="Submit" class="submit-btn">
             </form>
         </div>
+    </section>
+    <section class="tarifs">
+        <ul class="tarifs__list">
+            <li class="tarif-item">
+                <h1 class="tarif-heading">Economy Class</h1>
+                <p class="tarif-description">Quisque sollicitudin feugiat risus, eu <br> posuere ex euismod eu. Phasellus hen- <br> drerit, massa efficitur.</p>
+                <h2 class="tarif-price">$1,5/MI</h2>
+                <a href="#" class="read-more-btn btn-tarif">Read more</a>
+            </li>
+            <li class="tarif-item popular-tarif">
+                <h1 class="tarif-heading">Standart Class</h1>
+                <p class="tarif-description">Quisque sollicitudin feugiat risus, eu <br> posuere ex euismod eu. Phasellus hen- <br> drerit, massa efficitur.</p>
+                <h2 class="tarif-price">$1,5/MI</h2>
+                <a href="#" class="read-more-btn btn-popular-tarif">Read more</a>
+            </li>
+            <li class="tarif-item">
+                <h1 class="tarif-heading">Business Class</h1>
+                <p class="tarif-description">Quisque sollicitudin feugiat risus, eu <br> posuere ex euismod eu. Phasellus hen- <br> drerit, massa efficitur.</p>
+                <h2 class="tarif-price">$1,5/MI</h2>
+                <a href="#" class="read-more-btn btn-tarif">Read more</a>
+            </li>
+        </ul>
     </section>
 </body>
 </html>
