Added 3 new block

--- a/TaxiCabService/index.html
+++ b/TaxiCabService/index.html
@@ -63,26 +63,57 @@
         </div>
     </section>
     <section class="tarifs">
+        <h1 class="our-tariffs heading-title"><span>Our</span> <br> Tariffs</h1>
         <ul class="tarifs__list">
             <li class="tarif-item">
+                <img src="img/png/car-taxi.png" alt="car-taxi" class="bg-tariffs">
                 <h1 class="tarif-heading">Economy Class</h1>
                 <p class="tarif-description">Quisque sollicitudin feugiat risus, eu <br> posuere ex euismod eu. Phasellus hen- <br> drerit, massa efficitur.</p>
                 <h2 class="tarif-price">$1,5/MI</h2>
                 <a href="#" class="read-more-btn btn-tarif">Read more</a>
             </li>
             <li class="tarif-item popular-tarif">
+                <img src="img/png/car-taxi.png" alt="car-taxi" class="bg-tariffs">
                 <h1 class="tarif-heading">Standart Class</h1>
                 <p class="tarif-description">Quisque sollicitudin feugiat risus, eu <br> posuere ex euismod eu. Phasellus hen- <br> drerit, massa efficitur.</p>
                 <h2 class="tarif-price">$1,5/MI</h2>
                 <a href="#" class="read-more-btn btn-popular-tarif">Read more</a>
             </li>
             <li class="tarif-item">
+                <img src="img/png/car-taxi.png" alt="car-taxi" class="bg-tariffs">
                 <h1 class="tarif-heading">Business Class</h1>
                 <p class="tarif-description">Quisque sollicitudin feugiat risus, eu <br> posuere ex euismod eu. Phasellus hen- <br> drerit, massa efficitur.</p>
                 <h2 class="tarif-price">$1,5/MI</h2>
                 <a href="#" class="read-more-btn btn-tarif">Read more</a>
             </li>
         </ul>
+    </section>
+    <section class="we-do">
+        <h1 class="we-do__heading heading-title"><span>we do best</span><br>Than you wish</h1>
+        <ul class="wish-list">
+            <li class="wish-item bg-wish-1">
+                <h1 class="wish-heading">Home pickup</h1>
+                <p class="wish-description">Quisque sollicitudin feugiat risus, eu posuere <br>ex euismod eu. Phasellus hendrerit, massa effi- <br>citur.</p>
+            </li>
+            <li class="wish-item bg-wish-2">
+                <h1 class="wish-heading">Fast booking</h1>
+                <p class="wish-description">Quisque sollicitudin feugiat risus, eu posuere <br>ex euismod eu. Phasellus hendrerit, massa effi- <br>citur.</p>
+            </li>
+            <li class="wish-item bg-wish-3">
+                <h1 class="wish-heading">Bonuses for ride</h1>
+                <p class="wish-description">Quisque sollicitudin feugiat risus, eu posuere <br>ex euismod eu. Phasellus hendrerit, massa effi- <br>citur.</p>
+            </li>
+            <li class="wish-item bg-wish-4">
+                <h1 class="wish-heading">Gps searching</h1>
+                <p class="wish-description">Quisque sollicitudin feugiat risus, eu posuere <br>ex euismod eu. Phasellus hendrerit, massa effi- <br>citur.</p>
+            </li>
+        </ul>
+        <a href="#" class="read-more-btn btn-wish">Read more</a>
+    </section>
+    <section class="download">
+        <h1 class="download__heading heading-title"><span>Download</span> <br> Best cab servies</h1>
+        <h3 class="free-download">Downlaod the Cab voucher app free! <br> Get Exciting New Offers</h3>
+        <p class="download-description">Quisque sollicitudin feugiat risus, eu posuere <br>ex euismod eu. Phasellus hendrerit, massa effi- <br>citur.</p>
     </section>
 </body>
 </html>
