Added new blocks

--- a/TaxiCabService/index.html
+++ b/TaxiCabService/index.html
@@ -115,5 +115,28 @@
         <h3 class="free-download">Downlaod the Cab voucher app free! <br> Get Exciting New Offers</h3>
         <p class="download-description">Quisque sollicitudin feugiat risus, eu posuere <br>ex euismod eu. Phasellus hendrerit, massa effi- <br>citur.</p>
     </section>
+    <section class="testimonials">
+        <h1 class="testimonials__heading heading-title"><span>Happy client's</span> <br> Testimonials</h1>
+        <ul class="testimonials-list">
+            <li class="testimonials-item">
+                <p class="testimonials-description">Quisque sollicitudin feugiat risus, eu posuere ex euismod <br> eu. Phasellus hendrerit, massa efficitur.Quisque sollicitudin <br> feugiat risus.</p>
+                <div class="client-info-block">
+                    <img src="img/png/user-bg.png" alt="John Doe" class="client-photo">
+                    <h2 class="client-info">John Doe <br> <span>Business Man</span></h2>
+                </div>
+            </li>
+            <li class="testimonials-item">
+                <p class="testimonials-description">Quisque sollicitudin feugiat risus, eu posuere ex euismod <br> eu. Phasellus hendrerit, massa efficitur.Quisque sollicitudin <br> feugiat risus.</p>
+                <div class="client-info-block">
+                    <img src="img/png/user-bg.png" alt="John Doe" class="client-photo">
+                    <h2 class="client-info">John Doe <br> <span>Business Man</span></h2>
+                </div>
+            </li>
+        </ul>
+    </section>
+    <section class="callback">
+        <h1 class="callback__description">We are ready to take your call 24 hours, 7days!</h1>
+        <h2 class="callback__number header-number">+123 4567 8900</h2>
+    </section>
 </body>
 </html>
